tests/machine/x/cobol/nested_function.cob
*> Generated by Mochi compiler v0.10.26 on 2025-07-16T15:32:17Z
>>SOURCE FORMAT FREE
       IDENTIFICATION DIVISION.
       PROGRAM-ID. NESTED-FUNCTION.
       DATA DIVISION.
       WORKING-STORAGE SECTION.
       01 FN-OUTER-RES PIC 9 VALUE 0.
       01 TMP PIC 9(9) VALUE 0.
       PROCEDURE DIVISION.
       PERFORM FN_OUTER USING 3
       DISPLAY FN_OUTER_RES
       STOP RUN.
       
       FN_OUTER.
           PROCEDURE DIVISION USING X.
               PERFORM FN_INNER USING 5
               COMPUTE FN_OUTER_RES = FN_INNER_RES
               EXIT.
